--- a/style.css
+++ b/style.css
@@ -31,3 +31,9 @@ body{
 .navbar-dark{
   background-color: #512DA8;
 }
+.tab-content{
+  border-left:1px solid #dddddd;
+  border-right:1px solid #dddddd;
+  border-bottom:1px solid #dddddd;
+  padding: 10px;
+}
